using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public enum BackgroundState { Suburb, City };

public enum DazzaAnimationState { DefaultSkin, PoliceSkin, ShirtlessSkin, TradieSkin, SpeedBoost, Jumping, Falling, Death, ShirtlessJumping, ShirtlessDeath, ShirtlessFalling, ShirtlessSpeedBoost, PoliceJumping, PoliceFalling, PoliceDeath, PoliceSpeedBoost, TradieJumping, TradieFalling, TradieDeath, TradieSpeedBoost, Revive, PoliceRevive, ShirtlessRevive, TradieRevive}

public enum DazzaSkin { Default, Police, Shirtless, Tradie}

public enum Upgrades {None, DoubleDollaryDoos, HeadStart, Revive }